[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "polar_h10"
version = "0.0.1"
dependencies = [
    "bleak ~= 0.22.0"
]
requires-python = ">=3.8"
maintainers = [
  {name = "Lorek"}
]
description = "Polar H10 belt python api"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["Polar H10", "ECG", "BELT"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/L0rek/polar_h10"
Changelog = "https://github.com/L0rek/polar_h10/blob/main/CHANGELOG.md"

[project.scripts]
polar-h10-test = "polar_h10.__main__:main"

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "UP035",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "PLR2004",
    "COM812"
]
unfixable = ["F401", "F841"]
